# bkmrks

./: .env_template  .gitignore  CHANGELOG.md  Makefile  README.md  main.py  pyproject.toml
src/bkmrks/: __init__.py  bkmrks.py  files.py  folders.py  icons.py  md.py  presenter.py  urls.py
tests/: test_urls.py
